FPVTL-3075: Refactor