@@ -5,7 +5,6 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.io.FilenameUtils;
 import org.apache.commons.lang3.StringUtils;
-import org.jspecify.annotations.NonNull;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import uk.gov.hmcts.reform.ccd.client.model.CallbackRequest;
@@ -18,10 +17,10 @@ import uk.gov.hmcts.reform.prl.services.sendandreply.SendAndReplyService;
 import uk.gov.hmcts.reform.prl.utils.CaseUtils;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 
 import static org.apache.commons.lang3.StringUtils.isNotBlank;
 import static uk.gov.hmcts.reform.prl.services.sendandreply.SendAndReplyService.ARROW_SEPARATOR;
@@ -31,19 +30,18 @@ import static uk.gov.hmcts.reform.prl.services.sendandreply.SendAndReplyService.
 @RequiredArgsConstructor(onConstructor = @__(@Autowired))
 public class RenameDocumentService {
 
-    public static final List<String> IGNORED_FIELDS = Arrays.asList(
+    private final ObjectMapper objectMapper;
+    private final SendAndReplyService sendAndReplyService;
+    private final DocumentExtractor documentExtractor;
+    private final DocumentCategoryService documentCategoryService;
+
+    private static final List<String> FIELDS_FOR_UNCATEGORISED_DOCUMENTS = List.of(
         "finalServedApplicationDetailsList",
         "internalMessageAttachDocsList",
         "externalMessageAttachDocsList",
         "unServedApplicantPack",
         "unServedRespondentPack"
     );
-
-    private final ObjectMapper objectMapper;
-    private final SendAndReplyService sendAndReplyService;
-    private final DocumentExtractor documentExtractor;
-    private final DocumentCategoryService documentCategoryService;
-
 
     public Map<String, Object> handleAboutToStart(String authorisation,
                                                   CallbackRequest callbackRequest) {
@@ -74,30 +72,12 @@ public class RenameDocumentService {
 
         DynamicList categoriesAndDocumentsList = documentCategoryService.retrieveDocumentCategories(authorisation, caseData, null);
 
-        if (caseData.getRenameDocument() != null && caseData.getRenameDocument().getRenameDocumentsList() != null) {
+        if (null != caseData.getRenameDocument() && null != caseData.getRenameDocument().getRenameDocumentsList()) {
             DynamicList selectedList = caseData.getRenameDocument().getRenameDocumentsList();
-            if (null != selectedList.getValue() && isNotBlank(selectedList.getValue().getCode())) {
-
-                String documentName = selectedList.getValue().getLabel();
-                caseDataMap.put("renameListDocSelected", documentName);
-
-                String documentCode = selectedList.getValue().getCode();
-                log.info("Selected document code: {}", documentCode);
-                String[] codes = documentCode.split(ARROW_SEPARATOR);
-
-                if (codes.length >= 2) {
-                    String categoryIdFromCode = codes[codes.length - 2].trim();
-
-                    categoriesAndDocumentsList.getListItems().stream()
-                        .filter(element -> element.getCode().equals(categoryIdFromCode))
-                        .findFirst()
-                        .ifPresent(element -> {
-                            log.info("Matching category found in list for code: {}. Setting as pre-selected value.", element.getLabel());
-                            categoriesAndDocumentsList.setValue(element);
-                        });
-                }
-            }
+            addSelectedDocumentLabel(caseDataMap, selectedList);
+            prepopulateCategoryList(categoriesAndDocumentsList, selectedList);
         }
+
         caseDataMap.put("categoryDocumentsList", categoriesAndDocumentsList);
         return caseDataMap;
     }
@@ -107,26 +87,7 @@ public class RenameDocumentService {
         Map<String, Object> caseDataMap = callbackRequest.getCaseDetails().getData();
         CaseData caseData = CaseUtils.getCaseData(callbackRequest.getCaseDetails(), objectMapper);
 
-        if (caseData.getRenameDocument() != null && caseData.getRenameDocument().getRenameDocumentsList() != null) {
-            DynamicList selectedList = caseData.getRenameDocument().getRenameDocumentsList();
-            if (null != selectedList.getValue() && isNotBlank(selectedList.getValue().getCode())) {
-                String documentCode = selectedList.getValue().getCode();
-                String[] codes = documentCode.split(ARROW_SEPARATOR);
-                String documentId = codes[codes.length - 1].trim();
-
-                String newName = caseData.getRenameDocument().getNewNameForDocument();
-                String categoryId = null;
-                if (caseData.getRenameDocument().getCategoryDocumentsList() != null
-                    && caseData.getRenameDocument().getCategoryDocumentsList().getValue() != null) {
-                    categoryId = caseData.getRenameDocument().getCategoryDocumentsList().getValue().getCode();
-                }
-
-                if (isNotBlank(newName)) {
-                    boolean isAnyCategorisedPresent = isAnyCategorisedDocumentPresent(caseDataMap, documentId, false);
-                    findAndRenameDocument(caseDataMap, null, false, newName, documentId, categoryId, isAnyCategorisedPresent);
-                }
-            }
-        }
+        processRenamingDocument(caseData, caseDataMap);
 
         caseDataMap.remove("renameDocumentsList");
         caseDataMap.remove("categoryDocumentsList");
@@ -134,82 +95,6 @@ public class RenameDocumentService {
         caseDataMap.remove("renameListDocSelected");
         caseDataMap.remove("renameDocument");
         return caseDataMap;
-    }
-
-    private void findAndRenameDocument(Object data, String rootFieldName, boolean isUnderUncategorisedField,
-                                       String newName, String documentId, String categoryId,
-                                       boolean isAnyCategorisedPresent) {
-        if (data instanceof Map) {
-            Map<String, Object> map = (Map<String, Object>) data;
-
-            if (map.containsKey("document_url") && map.get("document_url") instanceof String) {
-                String url = (String) map.get("document_url");
-                if (url.contains(documentId)) {
-                    String currentName = (String) map.get("document_filename");
-                    String extension = FilenameUtils.getExtension(currentName);
-                    String newUploadName;
-                    if (currentName.startsWith("Confidential_")) {
-                        String confidentialPrefix = "Confidential_";
-                        String nameWithoutPrefix = newName.startsWith(confidentialPrefix)
-                            ? newName.substring(confidentialPrefix.length())
-                            : newName;
-
-                        newUploadName = isNotBlank(extension)
-                            ? confidentialPrefix + nameWithoutPrefix + "." + extension
-                            : confidentialPrefix + nameWithoutPrefix;
-                    } else {
-                        newUploadName = isNotBlank(extension) ? newName + "." + extension : newName;
-                    }
-
-                    log.info("Renaming the document in field: {}", rootFieldName);
-                    map.put("document_filename", newUploadName);
-                    if (!isUnderUncategorisedField || !isAnyCategorisedPresent) {
-                        log.info("About to add the category id for rootField: {}", rootFieldName);
-                        map.put("category_id", categoryId);
-                    }
-                    return;
-                }
-            }
-            for (Map.Entry<String, Object> entry : map.entrySet()) {
-                String key = entry.getKey();
-                String currentRootField = (rootFieldName == null) ? key : rootFieldName;
-                boolean nextIsUnder = isUnderUncategorisedField || IGNORED_FIELDS.contains(key);
-                findAndRenameDocument(entry.getValue(), currentRootField, nextIsUnder, newName, documentId, categoryId, isAnyCategorisedPresent);
-            }
-
-        } else if (data instanceof List) {
-            List<?> list = (List<?>) data;
-            for (Object item : list) {
-                findAndRenameDocument(item, rootFieldName, isUnderUncategorisedField, newName, documentId, categoryId, isAnyCategorisedPresent);
-            }
-        }
-    }
-
-    private boolean isAnyCategorisedDocumentPresent(Object data, String documentId, boolean isUnderUncategorisedField) {
-        if (data instanceof Map) {
-            Map<String, Object> map = (Map<String, Object>) data;
-
-            if (map.containsKey("document_url") && map.get("document_url") instanceof String) {
-                String url = (String) map.get("document_url");
-                if (url.contains(documentId)) {
-                    return !isUnderUncategorisedField;
-                }
-            }
-            for (Map.Entry<String, Object> entry : map.entrySet()) {
-                boolean nextIsUnder = isUnderUncategorisedField || IGNORED_FIELDS.contains(entry.getKey());
-                if (isAnyCategorisedDocumentPresent(entry.getValue(), documentId, nextIsUnder)) {
-                    return true;
-                }
-            }
-        } else if (data instanceof List) {
-            List<?> list = (List<?>) data;
-            for (Object item : list) {
-                if (isAnyCategorisedDocumentPresent(item, documentId, isUnderUncategorisedField)) {
-                    return true;
-                }
-            }
-        }
-        return false;
     }
 
     public List<String> validateRenamedField(Map<String, Object> caseDataUpdated) {
@@ -221,28 +106,156 @@ public class RenameDocumentService {
         return errors;
     }
 
-    private @NonNull DynamicList createDynamicListForRenameDocuments(CaseData caseData, DynamicList documentsList) {
-        List<uk.gov.hmcts.reform.prl.models.documents.Document> allDocuments = documentExtractor.getCaseDocuments(
-            caseData);
+    private void processRenamingDocument(CaseData caseData, Map<String, Object> caseDataMap) {
+        if (caseData.getRenameDocument() != null && caseData.getRenameDocument().getRenameDocumentsList() != null) {
+            DynamicList selectedList = caseData.getRenameDocument().getRenameDocumentsList();
+            if (null != selectedList.getValue() && isNotBlank(selectedList.getValue().getCode())) {
+                String documentId = getDocumentId(selectedList);
 
-        List<uk.gov.hmcts.reform.prl.models.documents.Document> quarantineDocuments = documentExtractor.getCaseDocuments(
-            CaseData.builder()
-                .documentManagementDetails(caseData.getDocumentManagementDetails())
-                .reviewDocuments(caseData.getReviewDocuments())
-                .scannedDocuments(caseData.getScannedDocuments())
-                .build()
-        );
+                Optional<String> categoryId = getCategoryId(caseData);
 
-        List<String> quarantineDocumentIds = quarantineDocuments.stream()
-            .map(uk.gov.hmcts.reform.prl.models.documents.Document::getDocumentId)
-            .toList();
+                String newName = caseData.getRenameDocument().getNewNameForDocument();
+                if (isNotBlank(newName)) {
+                    findAndRenameDocument(
+                        caseDataMap,
+                        null,
+                        false,
+                        newName,
+                        documentId,
+                        categoryId.orElse(null),
+                        isDocInstanceInCategories(caseDataMap, documentId, false));
+                }
+            }
+        }
+    }
 
-        List<String> existingDocumentIds = documentsList.getListItems().stream()
-            .map(item -> {
-                String[] codes = item.getCode().split(ARROW_SEPARATOR);
-                return codes[codes.length - 1];
-            })
-            .toList();
+    private Optional<String> getCategoryId(CaseData caseData) {
+        String categoryId = null;
+        if (caseData.getRenameDocument().getCategoryDocumentsList() != null
+            && caseData.getRenameDocument().getCategoryDocumentsList().getValue() != null) {
+            categoryId = caseData.getRenameDocument().getCategoryDocumentsList().getValue().getCode();
+        }
+        return Optional.ofNullable(categoryId);
+    }
+
+    private String getDocumentId(DynamicList selectedList) {
+        String documentCode = selectedList.getValue().getCode();
+        String[] codes = documentCode.split(ARROW_SEPARATOR);
+        return codes[codes.length - 1].trim();
+    }
+
+    private void findAndRenameDocument(Object data, String rootFieldName, boolean isUncategorisedField,
+                                       String newName, String documentId, String categoryId,
+                                       boolean isCategorisedInstancePresent) {
+        if (data instanceof Map) {
+            Map<String, Object> map = (Map<String, Object>) data;
+
+
+            if (map.containsKey("document_url") && map.get("document_url") instanceof String) {
+                String url = (String) map.get("document_url");
+                if (url.contains(documentId)) {
+                    updateDocumentMetadata(map, rootFieldName, isUncategorisedField, newName, categoryId, isCategorisedInstancePresent);
+                    return;
+                }
+            }
+            for (Map.Entry<String, Object> entry : map.entrySet()) {
+                String key = entry.getKey();
+                String currentRootField = (rootFieldName == null) ? key : rootFieldName;
+                boolean nextIsUncategorisedField = isUncategorisedField || FIELDS_FOR_UNCATEGORISED_DOCUMENTS.contains(key);
+                findAndRenameDocument(entry.getValue(),
+                                      currentRootField,
+                                      nextIsUncategorisedField,
+                                      newName,
+                                      documentId,
+                                      categoryId,
+                                      isCategorisedInstancePresent);
+            }
+
+        } else if (data instanceof List) {
+            List<?> list = (List<?>) data;
+            for (Object item : list) {
+                findAndRenameDocument(item, rootFieldName, isUncategorisedField, newName, documentId, categoryId, isCategorisedInstancePresent);
+            }
+        }
+    }
+
+    private void updateDocumentMetadata(Map<String, Object> documentMap,
+                                     String rootFieldName,
+                                     boolean isUncategorisedField,
+                                     String newName,
+                                     String categoryId,
+                                     boolean isCategorisedInstancePresent) {
+        String currentName = (String) documentMap.get("document_filename");
+        String extension = FilenameUtils.getExtension(currentName);
+        String newUploadName = checkForConfidentialPrefix(newName, currentName, extension);
+
+        log.info("Renaming the document in field: {}", rootFieldName);
+        documentMap.put("document_filename", newUploadName);
+
+        if (!isUncategorisedField || !isCategorisedInstancePresent) {
+            log.info("About to add the category id for rootField: {}", rootFieldName);
+            documentMap.put("category_id", categoryId);
+        }
+    }
+
+    private boolean isDocInstanceInCategories(Object data, String documentId, boolean isDocInstanceInUncategorisedDocs) {
+        if (data instanceof Map) {
+            Map<String, Object> map = (Map<String, Object>) data;
+
+            if (map.containsKey("document_url") && map.get("document_url") instanceof String) {
+                String url = (String) map.get("document_url");
+                if (url.contains(documentId)) {
+                    return !isDocInstanceInUncategorisedDocs;
+                }
+            }
+            for (Map.Entry<String, Object> entry : map.entrySet()) {
+                boolean nextDocInstanceInUncategorisedDocs =
+                    isDocInstanceInUncategorisedDocs || FIELDS_FOR_UNCATEGORISED_DOCUMENTS.contains(entry.getKey());
+                if (isDocInstanceInCategories(entry.getValue(), documentId, nextDocInstanceInUncategorisedDocs)) {
+                    return true;
+                }
+            }
+        } else if (data instanceof List) {
+            List<?> list = (List<?>) data;
+            for (Object item : list) {
+                if (isDocInstanceInCategories(item, documentId, isDocInstanceInUncategorisedDocs)) {
+                    return true;
+                }
+            }
+        }
+        return false;
+    }
+
+    private String checkForConfidentialPrefix(String newName, String currentName, String extension) {
+        String newUploadName;
+        if (currentName.startsWith("Confidential_")) {
+            String confidentialPrefix = "Confidential_";
+            String nameWithoutPrefix = newName.startsWith(confidentialPrefix)
+                ? newName.substring(confidentialPrefix.length())
+                : newName;
+
+            newUploadName = isNotBlank(extension)
+                ? confidentialPrefix + nameWithoutPrefix + "." + extension
+                : confidentialPrefix + nameWithoutPrefix;
+        } else {
+            newUploadName = isNotBlank(extension) ? newName + "." + extension : newName;
+        }
+        return newUploadName;
+    }
+
+
+    private DynamicList createDynamicListForRenameDocuments(CaseData caseData, DynamicList documentsList) {
+        List<uk.gov.hmcts.reform.prl.models.documents.Document> allDocuments = documentExtractor.getCaseDocuments(caseData);
+        List<String> quarantineDocumentIds = getQuarantineDocumentIds(caseData);
+
+        List<String> existingDocumentIds = documentsList.getListItems() != null
+            ? documentsList.getListItems().stream()
+                .map(item -> {
+                    String[] codes = item.getCode().split(ARROW_SEPARATOR);
+                    return codes[codes.length - 1];
+                })
+                .toList()
+            : List.of();
 
         List<DynamicListElement> extraDocuments = allDocuments.stream()
             .filter(doc -> !quarantineDocumentIds.contains(doc.getDocumentId()))
@@ -253,23 +266,54 @@ public class RenameDocumentService {
                 .build())
             .toList();
 
-        List<DynamicListElement> allListItems = new ArrayList<>();
-        if (documentsList.getListItems() != null) {
-            allListItems.addAll(documentsList.getListItems().stream()
-                                   .filter(item -> !item.getLabel().startsWith("Documents to be reviewed"))
-                                   .toList());
-        }
+        List<DynamicListElement> filteredExistingItems = documentsList.getListItems() != null
+            ? documentsList.getListItems().stream()
+                .filter(item -> !item.getLabel().startsWith("Documents to be reviewed"))
+                .toList()
+            : List.of();
+
+        List<DynamicListElement> allListItems = new ArrayList<>(filteredExistingItems);
         allListItems.addAll(extraDocuments);
 
-        documentsList = documentsList.toBuilder()
+        return documentsList.toBuilder()
             .listItems(allListItems)
             .build()
             .withSortedListItemsByLabel();
+    }
 
-        log.info(
-            "Found {} documents for dynamic list",
-            documentsList.getListItems() != null ? documentsList.getListItems().size() : 0
-        );
-        return documentsList;
+    private List<String> getQuarantineDocumentIds(CaseData caseData) {
+        return documentExtractor.getCaseDocuments(
+            CaseData.builder()
+                .documentManagementDetails(caseData.getDocumentManagementDetails())
+                .reviewDocuments(caseData.getReviewDocuments())
+                .scannedDocuments(caseData.getScannedDocuments())
+                .build()
+        ).stream().map(uk.gov.hmcts.reform.prl.models.documents.Document::getDocumentId).toList();
+    }
+
+    private void addSelectedDocumentLabel(Map<String, Object> caseDataMap, DynamicList selectedList) {
+        if (null != selectedList.getValue() && isNotBlank(selectedList.getValue().getLabel())) {
+            caseDataMap.put("renameListDocSelected", selectedList.getValue().getLabel());
+        }
+    }
+
+    private void prepopulateCategoryList(DynamicList categoriesAndDocumentsList, DynamicList selectedList) {
+        if (null != selectedList.getValue() && isNotBlank(selectedList.getValue().getCode())) {
+            String documentCode = selectedList.getValue().getCode();
+            log.info("Selected document code: {}", documentCode);
+            String[] codes = documentCode.split(ARROW_SEPARATOR);
+
+            if (codes.length >= 2) {
+                String categoryIdFromCode = codes[codes.length - 2].trim();
+
+                categoriesAndDocumentsList.getListItems().stream()
+                    .filter(element -> element.getCode().equals(categoryIdFromCode))
+                    .findFirst()
+                    .ifPresent(element -> {
+                        log.info("Matching category found in list for code: {}. Setting as pre-selected value.", element.getLabel());
+                        categoriesAndDocumentsList.setValue(element);
+                    });
+            }
+        }
     }
 }
